bug 320883: Handle split newlines at the end of chunks without duplicating newlines. r=bzbarsky rs=brendan